--- a/package.json
+++ b/package.json
@@ -8,12 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@notionhq/client": "^0.1.3",
+    "dateformat": "^4.5.1",
+    "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^6.0.2",
+    "react-syntax-highlighter": "^15.4.3",
+    "reading-time": "^1.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/typography": "^0.4.0",
+    "@types/dateformat": "^3.0.1",
     "@types/react": "^17.0.5",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.14",
     "tailwindcss": "^2.1.2",
