--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/react": "^17.0.5",
     "@types/react-syntax-highlighter": "^13.5.0",
     "autoprefixer": "^10.2.5",
+    "globby": "^11.0.3",
     "postcss": "^8.2.14",
+    "prettier": "^2.3.0",
     "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   }
