--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.2.14",
     "prettier": "^2.3.0",
     "tailwindcss": "^2.1.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "webpack-bundle-analyzer": "^4.4.2"
   }
 }
