--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "dependencies": {
     "@notionhq/client": "^0.1.3",
     "dateformat": "^4.5.1",
+    "firebase-admin": "^9.8.0",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.3",
-    "reading-time": "^1.3.0"
+    "reading-time": "^1.3.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
