--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/line-clamp": "^0.2.1",
     "@types/dateformat": "^3.0.1",
     "@types/react": "^17.0.5",
     "@types/react-syntax-highlighter": "^13.5.0",
