--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "@notionhq/client": "^0.1.3",
+    "@types/javascript-time-ago": "^2.0.2",
     "dateformat": "^4.5.1",
     "firebase-admin": "^9.8.0",
     "gray-matter": "^4.0.3",
+    "javascript-time-ago": "^2.3.6",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^6.0.2",
     "react-syntax-highlighter": "^15.4.3",
     "reading-time": "^1.3.0",
+    "styled-components": "^5.3.0",
     "swr": "^0.5.6"
   },
   "devDependencies": {
@@ -26,6 +29,7 @@
     "@types/dateformat": "^3.0.1",
     "@types/react": "^17.0.5",
     "@types/react-syntax-highlighter": "^13.5.0",
+    "@types/styled-components": "^5.1.9",
     "autoprefixer": "^10.2.5",
     "globby": "^11.0.3",
     "postcss": "^8.2.14",
