--- a/.github/workflows/update-liked-songs.yml
+++ b/.github/workflows/update-liked-songs.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: aouahib/spotify-job
+          token: ${{ secrets.GH_PAT }} # `GitHub_PAT` is a secret that contains your PAT
       - name: Execute the action
         uses: ./
         with:
