--- a/.github/workflows/update-liked-songs.yml
+++ b/.github/workflows/update-liked-songs.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: aouahib/spotify-job
+          ref: main
       - name: Execute the action
         uses: ./
         with:
