--- a/.github/workflows/update-liked-songs.yml
+++ b/.github/workflows/update-liked-songs.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Execute the action
         uses: ./
         with:
-          super_secret: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
+          secret: ${{ secrets.SPOTIFY_CLIENT_SECRET }}
