--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "^6.0.2",
+    "react-responsive": "^8.2.0",
     "react-syntax-highlighter": "^15.4.3",
     "reading-time": "^1.3.0",
     "styled-components": "^5.3.0",
@@ -28,6 +29,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/dateformat": "^3.0.1",
     "@types/react": "^17.0.5",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/styled-components": "^5.1.9",
     "autoprefixer": "^10.2.5",
