--- a/.github/workflows/update-liked-songs.yml
+++ b/.github/workflows/update-liked-songs.yml
@@ -7,7 +7,7 @@ name: UpdateLikedSongs
 on:
   # Schedules the cron job to be run every hour (theoretically)
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 0 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
