--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "@notionhq/client": "^0.1.3",
     "@types/javascript-time-ago": "^2.0.2",
+    "classnames": "^2.3.1",
     "dateformat": "^4.5.1",
-    "firebase-admin": "^9.8.0",
+    "firebase-admin": "^10.0.2",
     "gray-matter": "^4.0.3",
     "javascript-time-ago": "^2.3.6",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^12.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-markdown": "^6.0.2",
     "react-responsive": "^8.2.0",
     "react-syntax-highlighter": "^15.4.3",
@@ -25,19 +26,19 @@
     "swr": "^0.5.6"
   },
   "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.2.0",
-    "@tailwindcss/line-clamp": "^0.2.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
     "@types/dateformat": "^3.0.1",
     "@types/react": "^17.0.5",
     "@types/react-responsive": "^8.0.2",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/styled-components": "^5.1.9",
-    "autoprefixer": "^10.2.5",
+    "autoprefixer": "^10.4.4",
     "globby": "^11.0.3",
-    "postcss": "^8.2.14",
+    "postcss": "^8.4.12",
     "prettier": "^2.3.0",
-    "tailwindcss": "^2.1.2",
-    "typescript": "^4.2.4",
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.3",
     "webpack-bundle-analyzer": "^4.4.2"
   }
 }
