--- a/package.json
+++ b/package.json
@@ -33,10 +33,15 @@
     "@types/react-responsive": "^8.0.2",
     "@types/react-syntax-highlighter": "^13.5.0",
     "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "autoprefixer": "^10.4.4",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.29.4",
     "globby": "^11.0.3",
     "postcss": "^8.4.12",
-    "prettier": "^2.3.0",
+    "prettier": "^2.6.2",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3",
     "webpack-bundle-analyzer": "^4.4.2"
