--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prepare": "husky install",
+    "lint": "eslint src",
+    "typecheck": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
     "@notionhq/client": "^0.1.3",
@@ -40,6 +43,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
     "globby": "^11.0.3",
+    "husky": "^7.0.4",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.23",
